--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
   <div class="container">
-
+  <button onclick="playMusic()">unmute 🎶</button>
     <div class="section">
         <h2>added unecessary emojis so it doesnt get so awkward 😭😭</h2>
       <h2>Hey you,</h2>
@@ -119,3 +119,4 @@
   
 </body>
 </html>
+
